[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/DialogRelated/Controls/DialogElementControls/DialogChoicesPanel/DialogChoicesPanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/DialogRelated/Controls/DialogElementControls/DialogChoicesModiPanel/DialogChoicesModiPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Highlighted__Green.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Normal__Green.png" type="Texture" id=5]

[node name="DialogChoicesPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 104.0
margin_bottom = 100.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_left = 52.0
margin_right = 52.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="ConfirmButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 4.0
margin_right = 104.0
margin_bottom = 55.0
custom_constants/margin_top = 20
text_for_label = "Confirm"
background_texture_normal = ExtResource( 5 )
background_texture_highlighted = ExtResource( 4 )

[node name="DialogChoicesModiPanel" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 59.0
margin_right = 104.0
margin_bottom = 100.0

[connection signal="on_button_released_with_button_left" from="VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_on_button_released_with_button_left"]
